<resources>
    <string name="app_name">Crear Videos Con Fotos</string>

    <string name="app_name_cap" translatable="false">CREAR VIDEOS CON FOTOS</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern" translatable="false">%1$d / %2$d</string>
    <string name="banner_medium_size" translatable="false">360X132</string>
    <string name="banner_small_size" translatable="false">360X80</string>

    <string name="kilobyte" translatable="false">KB</string>
    <string name="megabyte" translatable="false">MB</string>
    <string name="duration" translatable="false">00:00</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-8994541259850004~6323529333</string>
    <string name="admob_banner" translatable="false">ca-app-pub-8994541259850004/3697365992</string>
    <string name="admob_interstitial" translatable="false">ca-app-pub-8994541259850004/7520404397</string>
    <string name="admob_nativead" translatable="false">ca-app-pub-8994541259850004/8929511377</string>
    <string name="ad_attribution" translatable="false">Ad</string>

    <string name="about_text">asdasas</string>
    <string name="about_title">About Audio cutter</string>
    <string name="album">Album</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_title_success">Success</string>
    <string name="applicatoin_not_found">Application not found</string>
    <string name="arrange_images">ARRANGE PHOTOS</string>
    <string name="artist_name">Movie Title</string>
    <string name="bad_extension_error">Sorry, Audio cutter is not yet able to edit files of type</string>
    <string name="changelanguage">CHANGE LANGUAGE</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="create_accurate_and_fast_video">CREATE ACCURATE ANDFAST VIDEO</string>
    <string name="create_slideshow_with_music">CREATE SLIDESHOW WITH MUSIC</string>
    <string name="create_slideshow_with_music_btn">CREATE SLIDESHOW WITH MUSIC</string>
    <string name="delete">Delete</string>
    <string name="delete_tmp_error">Error deleting temporary file</string>
    <string name="end_label">End:</string>
    <string name="end_marker">End marker</string>
    <string name="ffwd">Fast forward</string>
    <string name="game_zone">GAME ZONE</string>
    <string name="get_us">GET MORE</string>
    <string name="if_you_enjoying_would_you_mind_taking_a_moment_to_rate_it_thanks_for_your_support_">If you enjoying, would you mind taking a moment to rate it? Thanks for your support!</string>
    <string name="movie_album">MY SLIDESHOWS</string>
    <string name="my_slideshow">MY STORY</string>
    <string name="no_extension_error">"Sorry, audiocutter can't edit a file if it doesn't have an extension like .mp3 or .wav"</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="ok">Ok</string>
     <string name="permission_check_message">"Photo Slideshow with Music is about to ask you for authorization on some permissions. The permissions that are requested are NOT used by Photo Slideshow with Music itself, they are added so that developers that expand on Photo Slideshow with Music's functionality. Feel free to decline any of these permissions. You can manually access these from your system's app settings."</string>
    <string name="permission_check_title">"Photo Slideshow with Music's Permissions:"</string>
    <string name="play">Play</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="preview">PREVIEW</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string name="progress_dialog_saving">Saving...</string>
    <string name="rate_us">RATE US</string>
    <string name="read_error">Error reading file</string>
    <string name="rewind">Rewind</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="select_music">SELECT MUSIC</string>
    <string name="select_photos">SELECT PHOTOS</string>
    <string name="share">SHARE</string>
    <string name="share_native">Share</string>
    <string name="short_seconds">sec</string>
    <string name="start_label">Start:</string>
    <string name="start_marker">Start marker</string>
    <string name="stop">Stop</string>
    <string name="too_small_error">"Can't save a file that small, try making it longer."</string>
    <string name="upload_to_youtube">Share to YouTube</string>
    <string name="video_craetion_msg">Please wait your creation will be on process!!</string>
    <string name="view_slideshow">VIEW SLIDESHOW</string>
    <string name="write_error">Error writing file</string>
    <string name="recommend_this_app">Let me recommend you this application</string>
    <string name="my_app_name">My application name</string>
    <string name="choose_one">choose one</string>
    <string name="want_exist">Are You Sure You Want Exit?</string>
    <string name="rate">Rate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cant_find_market">unable to find market app</string>
    <string name="exist">Exit</string>
    <string name="permission_required">Permission required for this app</string>
    <string name="enable_permission">Go to settings and enable permissions</string>
    <string name="video_marker">Video Marker</string>
    <string name="my_creation">My Creation</string>
    <string name="dont_have_google_play">You don\'t have Google Play installed</string>
    <string name="loading">Loading...</string>
    <string name="delete_video">Delete Video !</string>
    <string name="sure_to_delete">Are you sure to delete </string>
    <string name="cancel">Cancel</string>
    <string name="share_video">Share Video</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="error">Error</string>
    <string name="album_not_created_yet">Album not Created yet</string>
    <string name="select_more_than_two">Select more than 2 Images for create video</string>
    <string name="please_wait">Please wait</string>
    <string name="loading_music">Loading music...</string>
    <string name="no_find_music">No Music found in device\nPlease add music in sdCard</string>
    <string name="unsupported_extension">UnsupportedExtension</string>
    <string name="remind_me_later">REMIND ME LATER</string>
    <string name="no_thanks">NO, THANKS</string>
    <string name="rate_it_now">RATE IT NOW</string>
    <string name="thanks_for_your_support">Thanks for your support!</string>
    <string name="if_you_like_this_app_than_don_t_forget_to_rate_this_app_it_won_t_take_more_than_minutes">If you Like this app than don\'t forget to rate this App. It won\'t take more than minutes</string>
    <string name="rate_this_app">Rate This App...</string>
    <string name="select_duration">Select Duration</string>
    <string name="my_album">My Album</string>
    <string name="play_video">Play Video</string>
    <string name="click_here_to_visit_my_album">Click Here To Visit My Album</string>
    <string name="applying_theme">Applying Theme</string>
    <string name="really_long_timeline_name_and_then_some">Really long timeline name and then some</string>
    <string name="images_not_selected_yet">Images not selected yet</string>

</resources>
